# casa

./: .gitignore  README.md  casa-kitty.service  flake.nix  provision.yml  pyproject.toml
casa/: __init__.py  devices.yaml  routes.py  schedules.py  smartplug.py  utils.py
casa/static/: styles.css
casa/templates/: base.html  index.html
